--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                 <h1 class="title">Hélio Correia</h1>
                 <h5>Artisan developer, passionate and peacefull</h5>
                 <ul>
-                    <li><a href="https://twitter.com/helio_c0rreia"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="https://github.com/helio-correia"><i class="fa fa-github"></i></a></li>
+                    <li><a href="https://twitter.com/helioascorreia"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://github.com/helioascorreia"><i class="fa fa-github"></i></a></li>
                     <li><a href="https://medium.com/@helio_correia"><i class="fa fa-medium"></i></a></li>
-                    <li><a href="https://www.instagram.com/helio.as.correia/"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/h%C3%A9lio-correia-64361088"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://www.instagram.com/helioascorreia/"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/helioascorreia"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
             </div>
         </div>
